dev/apps/admin-utm-web/admin-utm-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: adm-utm-web
  labels:
    app: adm-utm-web
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: adm-utm-web
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adm-utm-web
spec:
  selector:
    matchLabels:
      app: adm-utm-web
      version: v1
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: adm-utm-web
        version: v1
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: adm-utm-web
          image: edisaac/nodejsapp:c9f8dd3
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 80
